--- a/multi1/pom.xml
+++ b/multi1/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jfrog.test</groupId>
         <artifactId>multi</artifactId>
-        <version>4.8.10-SNAPSHOT</version>
+        <version>4.8.10</version>
     </parent>
 
     <artifactId>multi1</artifactId>
