--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
             <scope>test</scope>
         </dependency>
         
+        <dependency>
+         <groupId>com.github.jknack</groupId>
+         <artifactId>handlebars.java</artifactId>
+         <version>4.1.2</version>
+         <type>pom</type>
+        </dependency>
+        
     </dependencies>
 
     <build>
