--- a/multi3/pom.xml
+++ b/multi3/pom.xml
@@ -36,6 +36,13 @@
             <scope>provided</scope>
         </dependency>
           
+         <dependency>
+         <groupId>com.github.jknack</groupId>
+         <artifactId>handlebars.java</artifactId>
+         <version>4.1.2</version>
+         <type>pom</type>
+        </dependency>
+        
     </dependencies>
 
     <profiles>
