--- a/multi3/pom.xml
+++ b/multi3/pom.xml
@@ -43,6 +43,13 @@
          <type>pom</type>
         </dependency>
         
+    <dependency>
+	<groupId>com.elektrobit</groupId>
+    <artifactId>ASL-Implementation</artifactId>
+	<version>0.0.1</version>
+    <name>ASL-Implementation</name>
+    </dependency>
+        
     </dependencies>
 
     <profiles>
