--- a/multi1/pom.xml
+++ b/multi1/pom.xml
@@ -98,6 +98,14 @@
             <version>5.9</version>
             <scope>test</scope>
         </dependency> 
+        
+     <dependency>
+	<groupId>com.elektrobit</groupId>
+    <artifactId>ASL-Implementation</artifactId>
+	<version>0.0.1</version>
+    <name>ASL-Implementation</name>
+    </dependency>
+        
     </dependencies>
 
 </project>
