--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <scope>test</scope>
         </dependency>
         
+    <dependency>
+    <groupId>org.yaml</groupId>
+    <artifactId>snakeyaml</artifactId>
+    <version>1.20</version>
+    </dependency>
+        
     </dependencies>
 
     <build>
